[project]
name = "mapwidgets"
version = "0.1.0"
description = "PySide6 map widgets with MapLibre GL JS and Google Maps backends."
readme = "README.md"
authors = [
    { name = "haruiz", email = "henryruiz22@gmail.com" }
]
requires-python = ">=3.10"
keywords = [
    "maps",
    "pyside6",
    "maplibre",
    "google-maps",
    "geospatial",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[project.scripts]
mapwidgets = "mapwidgets.cli:main"

[project.optional-dependencies]
pyside = [
    "pyside6>=6.11.1",
]
geospatial = [
    "gdal>=3.13.1",
    "geopandas>=1.1.4",
    "rasterio>=1.4.4",
]

[project.urls]
Homepage = "https://github.com/OpenSciML/mapwidgets"
Repository = "https://github.com/OpenSciML/mapwidgets"
Issues = "https://github.com/OpenSciML/mapwidgets/issues"
Documentation = "https://opensciml.github.io/mapwidgets/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "/docs",
]

[dependency-groups]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.0",
]
dev = [
    "mypy>=1.16.0",
    "numpy>=1.24",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.0",
    "rasterio>=1.3",
    "ruff>=0.12.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    ".venv",
    "dist",
    "docs",
]

[tool.ruff.lint]
select = [
    "B",
    "C4",
    "E",
    "F",
    "I",
    "SIM",
    "UP",
]
ignore = [
    "B026",
]

[tool.mypy]
python_version = "3.11"
packages = [
    "mapwidgets",
]
ignore_missing_imports = true
